--- a/Template/template.html
+++ b/Template/template.html
@@ -7,48 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script src="./jquery-3.4.1.js"></script>
-  <style>
-    /* Remove the navbar's default margin-bottom and rounded borders */ 
-    .navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
-    
-    /* Put Navbar in Center */
-    #linkHeadings{
-    	text-align: center;
-      position: absolute;
-    	left: 50%;
-    	transform: translateX(-50%);
-  	}
-  
-    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 450px}
-    
-    /* Set gray background color and 100% height */
-    .sidenav {
-      padding-top: 20px;
-      background-color: #f1f1f1;
-      height: 100%;
-    }
-    
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
-    
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height:auto;} 
-    }
-  </style>
+
+  <link rel="stylesheet" href="../Content/css/home_dash.css">
+
 </head>
 <body>
 
@@ -72,42 +33,17 @@
   </div>
 </nav>
 
-<nav class="navbar navbar-inverse">
-  <ul class="nav navbar-nav" id="linkHeadings">
-    <p class="navbar-text">Select Location:</p>
-    <li><a href="javascript:changeName('Country');" id="Country">Country</a></li>
-    <li><a href="javascript:changeName('Region');" id="Region">Region</a></li>
-    <li><a href="javascript:changeName('State');" id="State">State</a></li>
-    <li><a href="javascript:changeName('City');" id="City">City</a></li>
-    <li style="top: 5px;">
-        <select class="form-control col-sm-4" name="selectedArea" id="selectedArea" onchange="getSelectedArea()">
-          <option value=''>Select Value</option>
-        </select>
-    </li>
-    <li><a href="#" style="background-color: rgb(49, 60, 75); border-radius: 15%; padding-bottom: 15%;">Search</a></li>
-  </ul>
-</nav>
-
-<div class="container-fluid text-center">    
+<div class="container-fluid text-center">
   <div class="row content">
-    <div class="col-sm-2 sidenav">
-      <p><a href="#">Correlation of Returns with Location</a></p>
-      <p><a href="#">Products Purchased</a></p>
-      <p><a href="#">Product Shipping Cost</a></p>
-    </div>
-    <div class="col-sm-8 text-left"> 
+    <!-- <div class="col-sm-2 sidenav">
+    </div> -->
+    <div class="col-sm-12 text-center">
       <h1>Welcome</h1>
       <hr>
-      <h3>Test</h3>
+      <h3>Login To Visualise Big-Data</h3>
     </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
-    </div>
+    <!-- <div class="col-sm-2 sidenav">
+    </div> -->
   </div>
 </div>
 
